package com.aiu.trips.enums;

public enum ActivityCategory {
    FIELD_TRIP,
    SEMINAR,
    CONFERENCE,
    CONCERT,
    CULTURAL_VISIT,
    ADVENTURE_TRIP
}
