package com.aiu.trips.enums;

public enum ActivityStatus {
    UPCOMING,
    COMPLETED,
    CANCELLED
}
