package com.aiu.trips.enums;

public enum ActivityType {
    EVENT,
    TRIP
}
