package com.aiu.trips.enums;

public enum ReportType {
    PARTICIPANTS,
    REVENUE,
    FEEDBACK
}
